# hids

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxygen.cmake  config.h.cmake
common/: CMakeLists.txt
common/gtest/: test_Main.cpp
common/inc/: Log.hpp  RecvUdp.hpp  SendUdp.hpp  Server.hpp  Util.hpp
common/src/: RecvUdp.cpp  SendUdp.cpp  Server._cpp  Util.cpp
doc/: Basic Design.md  Class Design.md  Detail Design.md  Functional Specification.md  Interface Specification.md
hids/: CMakeLists.txt  README  main_function.cpp
hids/src/: FanotifyWatcher.cpp  InotifyWatcher.cpp  Main.cpp  Main.hpp  YaraScanner.hpp  YaraTest.cpp  YaraTest.hpp  YaraTest2.cpp
